# online-city-tickets-backend/src/main/java/org/pwr/onlinecityticketsbackend/dto/recharge/RechargeWithBlikReqDto.java
@@ -1,0 +1,15 @@
+package org.pwr.onlinecityticketsbackend.dto.recharge;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class RechargeWithBlikReqDto {
+    Long amountGrosze;
+    String blikCode;
+}
