# online-city-tickets-backend/src/main/java/org/pwr/onlinecityticketsbackend/dto/recharge/RechargeWithNewCreditCardReqDto.java
@@ -1,0 +1,18 @@
+package org.pwr.onlinecityticketsbackend.dto.recharge;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class RechargeWithNewCreditCardReqDto {
+    Long amountGrosze;
+    String number;
+    String holderName;
+    String expirationDate;
+    String cvc;
+}
