# online-city-tickets-backend/src/main/java/org/pwr/onlinecityticketsbackend/dto/recharge/RechargeWithSavedCreditCardReqDto.java
@@ -1,0 +1,16 @@
+package org.pwr.onlinecityticketsbackend.dto.recharge;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class RechargeWithSavedCreditCardReqDto {
+    Long amountGrosze;
+    Long creditCardId;
+    String cvc;
+}
