# online-city-tickets-backend/src/main/resources/static/openapi.json
@@ -13,7 +13,9 @@
   "paths": {
     "/auth/register/passenger": {
       "post": {
-        "tags": ["auth"],
+        "tags": [
+          "auth"
+        ],
         "summary": "Register a new passenger account.",
         "operationId": "registerAsPassenger",
         "requestBody": {
@@ -48,7 +50,9 @@
     },
     "/auth/register/inspector": {
       "post": {
-        "tags": ["auth"],
+        "tags": [
+          "auth"
+        ],
         "summary": "Register a new inspector account.",
         "operationId": "registerAsInspector",
         "requestBody": {
@@ -88,7 +92,9 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["auth"],
+        "tags": [
+          "auth"
+        ],
         "summary": "Log in to the system.",
         "description": "Returns a JWT, which should be included in the Authorization header of all subsequent requests.<br/>Can be used by both passengers and inspectors.",
         "operationId": "login",
@@ -121,7 +127,9 @@
     },
     "/account": {
       "get": {
-        "tags": ["accounts"],
+        "tags": [
+          "accounts"
+        ],
         "summary": "Get current account's details.",
         "operationId": "getAccount",
         "responses": {
@@ -149,7 +157,9 @@
         ]
       },
       "patch": {
-        "tags": ["accounts"],
+        "tags": [
+          "accounts"
+        ],
         "summary": "Update current account's details.",
         "operationId": "updateAccount",
         "requestBody": {
@@ -189,7 +199,9 @@
     },
     "/credit-cards": {
       "get": {
-        "tags": ["cards"],
+        "tags": [
+          "cards"
+        ],
         "summary": "List all saved credit cards of the current account.",
         "operationId": "listCreditCards",
         "responses": {
@@ -217,7 +229,9 @@
         ]
       },
       "post": {
-        "tags": ["cards"],
+        "tags": [
+          "cards"
+        ],
         "summary": "Save a new credit card on the current account.",
         "operationId": "saveCreditCard",
         "requestBody": {
@@ -260,7 +274,9 @@
     },
     "/credit-cards/{id}": {
       "get": {
-        "tags": ["cards"],
+        "tags": [
+          "cards"
+        ],
         "summary": "Get details of a saved credit card.",
         "operationId": "getCreditCard",
         "responses": {
@@ -288,7 +304,9 @@
         ]
       },
       "patch": {
-        "tags": ["cards"],
+        "tags": [
+          "cards"
+        ],
         "summary": "Update details of a saved credit card.",
         "operationId": "updateCreditCard",
         "requestBody": {
@@ -329,7 +347,9 @@
         ]
       },
       "delete": {
-        "tags": ["cards"],
+        "tags": [
+          "cards"
+        ],
         "summary": "Delete a saved credit card.",
         "operationId": "deleteCreditCard",
         "responses": {
@@ -357,7 +377,9 @@
     },
     "/recharge/new-credit-card": {
       "post": {
-        "tags": ["recharging"],
+        "tags": [
+          "recharging"
+        ],
         "summary": "Recharge the virtual wallet using a new credit card.",
         "description": "This operation does not save the credit card on the account.<br/>Use the `/account/credit-cards` endpoint instead.<br/>This operation is propagated to the payment service.",
         "operationId": "rechargeWithNewCreditCard",
@@ -398,7 +420,9 @@
     },
     "/recharge/saved-credit-card": {
       "post": {
-        "tags": ["recharging"],
+        "tags": [
+          "recharging"
+        ],
         "summary": "Recharge the virtual wallet using a saved credit card.",
         "description": "This operation is propagated to the payment service.",
         "operationId": "rechargeWithSavedCreditCard",
@@ -442,7 +466,9 @@
     },
     "/recharge/blik": {
       "post": {
-        "tags": ["recharging"],
+        "tags": [
+          "recharging"
+        ],
         "summary": "Recharge the virtual wallet using BLIK.",
         "description": "This operation is propagated to the payment service.",
         "operationId": "rechargeWithBlik",
@@ -483,7 +509,9 @@
     },
     "/offers": {
       "get": {
-        "tags": ["offers"],
+        "tags": [
+          "offers"
+        ],
         "summary": "List all available ticket offers.",
         "operationId": "listTicketOffers",
         "responses": {
@@ -505,7 +533,9 @@
     },
     "/offers/{id}": {
       "get": {
-        "tags": ["offers"],
+        "tags": [
+          "offers"
+        ],
         "summary": "Get details of a single ticket offer.",
         "operationId": "getTicketOffer",
         "responses": {
@@ -532,7 +562,9 @@
     },
     "/tickets": {
       "get": {
-        "tags": ["tickets"],
+        "tags": [
+          "tickets"
+        ],
         "summary": "List all tickets of the current account.",
         "operationId": "listTickets",
         "responses": {
@@ -560,7 +592,9 @@
         ]
       },
       "post": {
-        "tags": ["tickets"],
+        "tags": [
+          "tickets"
+        ],
         "summary": "Purchase a new ticket.",
         "description": "This operation charges the ticket price from the virtual wallet.",
         "operationId": "purchaseTicket",
@@ -607,7 +641,9 @@
     },
     "/tickets/{code}": {
       "get": {
-        "tags": ["tickets"],
+        "tags": [
+          "tickets"
+        ],
         "summary": "Get details of a single ticket of the current account.",
         "operationId": "getTicket",
         "responses": {
@@ -642,7 +678,9 @@
     },
     "/tickets/{code}/validate": {
       "post": {
-        "tags": ["validation"],
+        "tags": [
+          "validation"
+        ],
         "summary": "Validate a ticket.",
         "description": "Ensures that a single-fare or time-limited ticket becomes valid.",
         "operationId": "validateTicket",
@@ -686,7 +724,9 @@
     },
     "/tickets/{code}/inspect": {
       "post": {
-        "tags": ["inspection"],
+        "tags": [
+          "inspection"
+        ],
         "summary": "Inspect a ticket.",
         "description": "Checks if the ticket was correctly validated.",
         "operationId": "inspectTicket",
@@ -732,7 +772,9 @@
     },
     "/actuator/health": {
       "get": {
-        "tags": ["server-info"],
+        "tags": [
+          "server-info"
+        ],
         "summary": "Check the health of the server.",
         "operationId": "checkHealth",
         "responses": {
@@ -753,7 +795,10 @@
   "components": {
     "schemas": {
       "BaseAccountDto": {
-        "required": ["fullName", "email"],
+        "required": [
+          "fullName",
+          "email"
+        ],
         "type": "object",
         "properties": {
           "fullName": {
@@ -771,11 +816,16 @@
             "$ref": "#/components/schemas/BaseAccountDto"
           },
           {
-            "required": ["type", "walletBalanceGrosze"],
+            "required": [
+              "type",
+              "walletBalanceGrosze"
+            ],
             "properties": {
               "type": {
                 "type": "string",
-                "enum": ["passenger"]
+                "enum": [
+                  "passenger"
+                ]
               },
               "walletBalanceGrosze": {
                 "type": "integer",
@@ -794,11 +844,15 @@
             "$ref": "#/components/schemas/BaseAccountDto"
           },
           {
-            "required": ["type"],
+            "required": [
+              "type"
+            ],
             "properties": {
               "type": {
                 "type": "string",
-                "enum": ["inspector"]
+                "enum": [
+                  "inspector"
+                ]
               }
             }
           }
@@ -815,7 +869,11 @@
         ]
       },
       "RegisterAsPassengerReq": {
-        "required": ["fullName", "email", "password"],
+        "required": [
+          "fullName",
+          "email",
+          "password"
+        ],
         "type": "object",
         "properties": {
           "fullName": {
@@ -834,7 +892,11 @@
         }
       },
       "RegisterAsInspectorReq": {
-        "required": ["fullName", "email", "password"],
+        "required": [
+          "fullName",
+          "email",
+          "password"
+        ],
         "type": "object",
         "properties": {
           "fullName": {
@@ -850,7 +912,10 @@
         }
       },
       "LoginReq": {
-        "required": ["email", "password"],
+        "required": [
+          "email",
+          "password"
+        ],
         "type": "object",
         "properties": {
           "email": {
@@ -863,7 +928,9 @@
         }
       },
       "LoginRes": {
-        "required": ["jwt"],
+        "required": [
+          "jwt"
+        ],
         "type": "object",
         "properties": {
           "jwt": {
@@ -886,7 +953,12 @@
         }
       },
       "CreditCardDto": {
-        "required": ["id", "lastFourDigits", "holderName", "expirationDate"],
+        "required": [
+          "id",
+          "lastFourDigits",
+          "holderName",
+          "expirationDate"
+        ],
         "type": "object",
         "properties": {
           "id": {
@@ -909,7 +981,11 @@
         }
       },
       "SaveCreditCardReq": {
-        "required": ["number", "holderName", "expirationDate"],
+        "required": [
+          "number",
+          "holderName",
+          "expirationDate"
+        ],
         "type": "object",
         "properties": {
           "label": {
@@ -945,7 +1021,7 @@
           "number",
           "holderName",
           "expirationDate",
-          "csc"
+          "cvc"
         ],
         "type": "object",
         "properties": {
@@ -963,13 +1039,17 @@
           "expirationDate": {
             "$ref": "#/components/schemas/expirationDate"
           },
-          "csc": {
-            "$ref": "#/components/schemas/csc"
+          "cvc": {
+            "$ref": "#/components/schemas/cvc"
           }
         }
       },
       "RechargeWithSavedCreditCardReq": {
-        "required": ["amountGrosze", "creditCardId", "csc"],
+        "required": [
+          "amountGrosze",
+          "creditCardId",
+          "cvc"
+        ],
         "type": "object",
         "properties": {
           "amountGrosze": {
@@ -980,13 +1060,16 @@
           "creditCardId": {
             "$ref": "#/components/schemas/id"
           },
-          "csc": {
-            "$ref": "#/components/schemas/csc"
+          "cvc": {
+            "$ref": "#/components/schemas/cvc"
           }
         }
       },
       "RechargeWithBlikReq": {
-        "required": ["amountGrosze", "blikCode"],
+        "required": [
+          "amountGrosze",
+          "blikCode"
+        ],
         "type": "object",
         "properties": {
           "amountGrosze": {
@@ -1001,7 +1084,10 @@
         }
       },
       "RechargeDto": {
-        "required": ["time", "newWalletBalanceGrosze"],
+        "required": [
+          "time",
+          "newWalletBalanceGrosze"
+        ],
         "type": "object",
         "properties": {
           "time": {
@@ -1038,7 +1124,10 @@
           },
           "kind": {
             "type": "string",
-            "enum": ["standard", "reduced"]
+            "enum": [
+              "standard",
+              "reduced"
+            ]
           },
           "priceGrosze": {
             "type": "integer",
@@ -1053,11 +1142,15 @@
             "$ref": "#/components/schemas/BaseTicketOfferDto"
           },
           {
-            "required": ["scope"],
+            "required": [
+              "scope"
+            ],
             "properties": {
               "scope": {
                 "type": "string",
-                "enum": ["single-fare"]
+                "enum": [
+                  "single-fare"
+                ]
               }
             }
           }
@@ -1069,11 +1162,16 @@
             "$ref": "#/components/schemas/BaseTicketOfferDto"
           },
           {
-            "required": ["scope", "durationMinutes"],
+            "required": [
+              "scope",
+              "durationMinutes"
+            ],
             "properties": {
               "scope": {
                 "type": "string",
-                "enum": ["time-limited"]
+                "enum": [
+                  "time-limited"
+                ]
               },
               "durationMinutes": {
                 "type": "integer",
@@ -1089,11 +1187,16 @@
             "$ref": "#/components/schemas/BaseTicketOfferDto"
           },
           {
-            "required": ["scope", "validDays"],
+            "required": [
+              "scope",
+              "validDays"
+            ],
             "properties": {
               "scope": {
                 "type": "string",
-                "enum": ["long-term"]
+                "enum": [
+                  "long-term"
+                ]
               },
               "validDays": {
                 "type": "integer",
@@ -1117,7 +1220,9 @@
         ]
       },
       "PurchaseTicketReq": {
-        "required": ["offerId"],
+        "required": [
+          "offerId"
+        ],
         "type": "object",
         "properties": {
           "offerId": {
@@ -1126,7 +1231,12 @@
         }
       },
       "TicketDto": {
-        "required": ["code", "purchaseTime", "offer", "ticketStatus"],
+        "required": [
+          "code",
+          "purchaseTime",
+          "offer",
+          "ticketStatus"
+        ],
         "type": "object",
         "properties": {
           "code": {
@@ -1144,12 +1254,17 @@
           },
           "ticketStatus": {
             "type": "string",
-            "enum": ["ACTIVE", "NOT_ACTIVE"]
+            "enum": [
+              "ACTIVE",
+              "NOT_ACTIVE"
+            ]
           }
         }
       },
       "ValidateTicketReq": {
-        "required": ["vehicleSideNumber"],
+        "required": [
+          "vehicleSideNumber"
+        ],
         "type": "object",
         "properties": {
           "vehicleSideNumber": {
@@ -1158,7 +1273,10 @@
         }
       },
       "ValidationDto": {
-        "required": ["time", "vehicleSideNumber"],
+        "required": [
+          "time",
+          "vehicleSideNumber"
+        ],
         "type": "object",
         "properties": {
           "time": {
@@ -1171,7 +1289,9 @@
         }
       },
       "InspectTicketReq": {
-        "required": ["vehicleSideNumber"],
+        "required": [
+          "vehicleSideNumber"
+        ],
         "type": "object",
         "properties": {
           "vehicleSideNumber": {
@@ -1180,22 +1300,31 @@
         }
       },
       "InspectTicketValidRes": {
-        "required": ["status"],
+        "required": [
+          "status"
+        ],
         "type": "object",
         "properties": {
           "status": {
             "type": "string",
-            "enum": ["valid"]
+            "enum": [
+              "valid"
+            ]
           }
         }
       },
       "InspectTicketInvalidRes": {
-        "required": ["status", "reason"],
+        "required": [
+          "status",
+          "reason"
+        ],
         "type": "object",
         "properties": {
           "status": {
             "type": "string",
-            "enum": ["invalid"]
+            "enum": [
+              "invalid"
+            ]
           },
           "reason": {
             "type": "string",
@@ -1251,7 +1380,7 @@
         "type": "string",
         "pattern": "^(0[1-9]|1[0-2])/[0-9]{2}$"
       },
-      "csc": {
+      "cvc": {
         "type": "string",
         "pattern": "^[0-9]{3}$"
       },
@@ -1264,12 +1393,16 @@
         "pattern": "^[A-Z]{3} [0-9]{5}$"
       },
       "HealthDto": {
-        "required": ["status"],
+        "required": [
+          "status"
+        ],
         "type": "object",
         "properties": {
           "status": {
             "type": "string",
-            "enum": ["UP"]
+            "enum": [
+              "UP"
+            ]
           }
         }
       }
